Lab2/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | error SEMI
    9       | Specifier error SEMI
   10       | Specifier error

   11 ExtDecList: VarDec
   12           | VarDec COMMA ExtDecList

   13 Specifier: TYPE
   14          | StructSpecifier

   15 StructSpecifier: STRUCT OptTag LC DefList RC
   16                | STRUCT Tag
   17                | STRUCT OptTag LC DefList error RC

   18 OptTag: ID
   19       | %empty

   20 Tag: ID

   21 VarDec: ID
   22       | VarDec LB INT RB
   23       | VarDec LB error RB

   24 FunDec: ID LP VarList RP
   25       | ID LP RP
   26       | ID LP error RP

   27 VarList: ParamDec COMMA VarList
   28        | ParamDec

   29 ParamDec: Specifier VarDec

   30 CompSt: LC DefList StmtList RC

   31 StmtList: Stmt StmtList
   32         | %empty

   33 Stmt: Exp SEMI
   34     | CompSt
   35     | RETURN Exp SEMI
   36     | IF LP Exp RP Stmt
   37     | IF LP Exp RP Stmt ELSE Stmt
   38     | WHILE LP Exp RP Stmt
   39     | error SEMI
   40     | IF LP error RP Stmt
   41     | IF LP Exp RP error ELSE Stmt
   42     | WHILE LP error RP Stmt
   43     | RETURN Exp error

   44 DefList: Def DefList
   45        | %empty

   46 Def: Specifier DecList SEMI
   47    | Specifier error SEMI

   48 DecList: Dec
   49        | Dec COMMA DecList

   50 Dec: VarDec
   51    | VarDec ASSIGNOP Exp

   52 Exp: Exp ASSIGNOP Exp
   53    | Exp AND Exp
   54    | Exp OR Exp
   55    | Exp RELOP Exp
   56    | Exp PLUS Exp
   57    | Exp MINUS Exp
   58    | Exp STAR Exp
   59    | Exp DIV Exp
   60    | LP Exp RP
   61    | MINUS Exp
   62    | NOT Exp
   63    | ID LP Args RP
   64    | ID LP RP
   65    | Exp LB Exp RB
   66    | Exp DOT ID
   67    | ID
   68    | INT
   69    | FLOAT
   70    | LP error RP
   71    | ID LP error RP
   72    | Exp LB error RB
   73    | Exp ASSIGNOP error
   74    | Exp AND error
   75    | Exp OR error
   76    | Exp RELOP error
   77    | Exp PLUS error
   78    | Exp MINUS error
   79    | Exp STAR error
   80    | Exp DIV error
   81    | LP Exp error
   82    | NOT error

   83 Args: Exp COMMA Args
   84     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 8 9 10 17 23 26 39 40 41 42 43 47 70 71 72 73 74 75 76
    77 78 79 80 81 82
INT (258) 22 68
FLOAT (259) 69
ID (260) 18 20 21 24 25 26 63 64 66 67 71
SEMI (261) 4 5 7 8 9 33 35 39 46 47
COMMA (262) 12 27 49 83
ASSIGNOP (263) 51 52 73
RELOP (264) 55 76
PLUS (265) 56 77
MINUS (266) 57 61 78
STAR (267) 58 79
DIV (268) 59 80
AND (269) 53 74
OR (270) 54 75
NOT (271) 62 82
TYPE (272) 13
LP (273) 24 25 26 36 37 38 40 41 42 60 63 64 70 71 81
RP (274) 24 25 26 36 37 38 40 41 42 60 63 64 70 71
LB (275) 22 23 65 72
RB (276) 22 23 65 72
LC (277) 15 17 30
RC (278) 15 17 30
STRUCT (279) 15 16 17
RETURN (280) 35 43
IF (281) 36 37 40 41
ELSE (282) 37 41
WHILE (283) 38 42
DOT (284) 66
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7 8 9 10, on right: 2
ExtDecList (35)
    on left: 11 12, on right: 4 12
Specifier (36)
    on left: 13 14, on right: 4 5 6 7 9 10 29 46 47
StructSpecifier (37)
    on left: 15 16 17, on right: 14
OptTag (38)
    on left: 18 19, on right: 15 17
Tag (39)
    on left: 20, on right: 16
VarDec (40)
    on left: 21 22 23, on right: 11 12 22 23 29 50 51
FunDec (41)
    on left: 24 25 26, on right: 6 7
VarList (42)
    on left: 27 28, on right: 24 27
ParamDec (43)
    on left: 29, on right: 27 28
CompSt (44)
    on left: 30, on right: 6 34
StmtList (45)
    on left: 31 32, on right: 30 31
Stmt (46)
    on left: 33 34 35 36 37 38 39 40 41 42 43, on right: 31 36 37 38
    40 41 42
DefList (47)
    on left: 44 45, on right: 15 17 30 44
Def (48)
    on left: 46 47, on right: 44
DecList (49)
    on left: 48 49, on right: 46 49
Dec (50)
    on left: 50 51, on right: 48 49
Exp (51)
    on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
    70 71 72 73 74 75 76 77 78 79 80 81 82, on right: 33 35 36 37 38
    41 43 51 52 53 54 55 56 57 58 59 60 61 62 65 66 72 73 74 75 76
    77 78 79 80 81 83 84
Args (52)
    on left: 83 84, on right: 63 83


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   13 Specifier: TYPE .

    $default  reduce using rule 13 (Specifier)


State 3

   15 StructSpecifier: STRUCT . OptTag LC DefList RC
   16                | STRUCT . Tag
   17                | STRUCT . OptTag LC DefList error RC

    ID  shift, and go to state 10

    $default  reduce using rule 19 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI
    9       | Specifier . error SEMI
   10       | Specifier . error

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   14 Specifier: StructSpecifier .

    $default  reduce using rule 14 (Specifier)


State 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 10

   18 OptTag: ID .
   20 Tag: ID .

    LC        reduce using rule 18 (OptTag)
    $default  reduce using rule 20 (Tag)


State 11

   15 StructSpecifier: STRUCT OptTag . LC DefList RC
   17                | STRUCT OptTag . LC DefList error RC

    LC  shift, and go to state 21


State 12

   16 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 16 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

    9 ExtDef: Specifier error . SEMI
   10       | Specifier error .

    SEMI  shift, and go to state 22

    $default  reduce using rule 10 (ExtDef)


State 16

   21 VarDec: ID .
   24 FunDec: ID . LP VarList RP
   25       | ID . LP RP
   26       | ID . LP error RP

    LP  shift, and go to state 23

    $default  reduce using rule 21 (VarDec)


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 19

   11 ExtDecList: VarDec .
   12           | VarDec . COMMA ExtDecList
   22 VarDec: VarDec . LB INT RB
   23       | VarDec . LB error RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 11 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    SEMI  shift, and go to state 27
    LC    shift, and go to state 28

    CompSt  go to state 29


State 21

   15 StructSpecifier: STRUCT OptTag LC . DefList RC
   17                | STRUCT OptTag LC . DefList error RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 45 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 31
    Def              go to state 32


State 22

    9 ExtDef: Specifier error SEMI .

    $default  reduce using rule 9 (ExtDef)


State 23

   24 FunDec: ID LP . VarList RP
   25       | ID LP . RP
   26       | ID LP . error RP

    error   shift, and go to state 33
    TYPE    shift, and go to state 2
    RP      shift, and go to state 34
    STRUCT  shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 36
    ParamDec         go to state 37


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

   12 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 38

    ExtDecList  go to state 39
    VarDec      go to state 19


State 26

   22 VarDec: VarDec LB . INT RB
   23       | VarDec LB . error RB

    error  shift, and go to state 40
    INT    shift, and go to state 41


State 27

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 28

   30 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 45 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 42
    Def              go to state 32


State 29

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 30

   46 Def: Specifier . DecList SEMI
   47    | Specifier . error SEMI

    error  shift, and go to state 43
    ID     shift, and go to state 38

    VarDec   go to state 44
    DecList  go to state 45
    Dec      go to state 46


State 31

   15 StructSpecifier: STRUCT OptTag LC DefList . RC
   17                | STRUCT OptTag LC DefList . error RC

    error  shift, and go to state 47
    RC     shift, and go to state 48


State 32

   44 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 45 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 49
    Def              go to state 32


State 33

   26 FunDec: ID LP error . RP

    RP  shift, and go to state 50


State 34

   25 FunDec: ID LP RP .

    $default  reduce using rule 25 (FunDec)


State 35

   29 ParamDec: Specifier . VarDec

    ID  shift, and go to state 38

    VarDec  go to state 51


State 36

   24 FunDec: ID LP VarList . RP

    RP  shift, and go to state 52


State 37

   27 VarList: ParamDec . COMMA VarList
   28        | ParamDec .

    COMMA  shift, and go to state 53

    $default  reduce using rule 28 (VarList)


State 38

   21 VarDec: ID .

    $default  reduce using rule 21 (VarDec)


State 39

   12 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 12 (ExtDecList)


State 40

   23 VarDec: VarDec LB error . RB

    RB  shift, and go to state 54


State 41

   22 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 55


State 42

   30 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 56
    INT     shift, and go to state 57
    FLOAT   shift, and go to state 58
    ID      shift, and go to state 59
    MINUS   shift, and go to state 60
    NOT     shift, and go to state 61
    LP      shift, and go to state 62
    LC      shift, and go to state 28
    RETURN  shift, and go to state 63
    IF      shift, and go to state 64
    WHILE   shift, and go to state 65

    RC  reduce using rule 32 (StmtList)

    CompSt    go to state 66
    StmtList  go to state 67
    Stmt      go to state 68
    Exp       go to state 69


State 43

   47 Def: Specifier error . SEMI

    SEMI  shift, and go to state 70


State 44

   22 VarDec: VarDec . LB INT RB
   23       | VarDec . LB error RB
   50 Dec: VarDec .
   51    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 71
    LB        shift, and go to state 26

    $default  reduce using rule 50 (Dec)


State 45

   46 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 72


State 46

   48 DecList: Dec .
   49        | Dec . COMMA DecList

    COMMA  shift, and go to state 73

    $default  reduce using rule 48 (DecList)


State 47

   17 StructSpecifier: STRUCT OptTag LC DefList error . RC

    RC  shift, and go to state 74


State 48

   15 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 15 (StructSpecifier)


State 49

   44 DefList: Def DefList .

    $default  reduce using rule 44 (DefList)


State 50

   26 FunDec: ID LP error RP .

    $default  reduce using rule 26 (FunDec)


State 51

   22 VarDec: VarDec . LB INT RB
   23       | VarDec . LB error RB
   29 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 29 (ParamDec)


State 52

   24 FunDec: ID LP VarList RP .

    $default  reduce using rule 24 (FunDec)


State 53

   27 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 75
    ParamDec         go to state 37


State 54

   23 VarDec: VarDec LB error RB .

    $default  reduce using rule 23 (VarDec)


State 55

   22 VarDec: VarDec LB INT RB .

    $default  reduce using rule 22 (VarDec)


State 56

   39 Stmt: error . SEMI

    SEMI  shift, and go to state 76


State 57

   68 Exp: INT .

    $default  reduce using rule 68 (Exp)


State 58

   69 Exp: FLOAT .

    $default  reduce using rule 69 (Exp)


State 59

   63 Exp: ID . LP Args RP
   64    | ID . LP RP
   67    | ID .
   71    | ID . LP error RP

    LP  shift, and go to state 77

    $default  reduce using rule 67 (Exp)


State 60

   61 Exp: MINUS . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 78


State 61

   62 Exp: NOT . Exp
   82    | NOT . error

    error  shift, and go to state 79
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 80


State 62

   60 Exp: LP . Exp RP
   70    | LP . error RP
   81    | LP . Exp error

    error  shift, and go to state 81
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 82


State 63

   35 Stmt: RETURN . Exp SEMI
   43     | RETURN . Exp error

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 83


State 64

   36 Stmt: IF . LP Exp RP Stmt
   37     | IF . LP Exp RP Stmt ELSE Stmt
   40     | IF . LP error RP Stmt
   41     | IF . LP Exp RP error ELSE Stmt

    LP  shift, and go to state 84


State 65

   38 Stmt: WHILE . LP Exp RP Stmt
   42     | WHILE . LP error RP Stmt

    LP  shift, and go to state 85


State 66

   34 Stmt: CompSt .

    $default  reduce using rule 34 (Stmt)


State 67

   30 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 86


State 68

   31 StmtList: Stmt . StmtList

    error   shift, and go to state 56
    INT     shift, and go to state 57
    FLOAT   shift, and go to state 58
    ID      shift, and go to state 59
    MINUS   shift, and go to state 60
    NOT     shift, and go to state 61
    LP      shift, and go to state 62
    LC      shift, and go to state 28
    RETURN  shift, and go to state 63
    IF      shift, and go to state 64
    WHILE   shift, and go to state 65

    RC  reduce using rule 32 (StmtList)

    CompSt    go to state 66
    StmtList  go to state 87
    Stmt      go to state 68
    Exp       go to state 69


State 69

   33 Stmt: Exp . SEMI
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   72    | Exp . LB error RB
   73    | Exp . ASSIGNOP error
   74    | Exp . AND error
   75    | Exp . OR error
   76    | Exp . RELOP error
   77    | Exp . PLUS error
   78    | Exp . MINUS error
   79    | Exp . STAR error
   80    | Exp . DIV error

    SEMI      shift, and go to state 88
    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    LB        shift, and go to state 97
    DOT       shift, and go to state 98


State 70

   47 Def: Specifier error SEMI .

    $default  reduce using rule 47 (Def)


State 71

   51 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 99


State 72

   46 Def: Specifier DecList SEMI .

    $default  reduce using rule 46 (Def)


State 73

   49 DecList: Dec COMMA . DecList

    ID  shift, and go to state 38

    VarDec   go to state 44
    DecList  go to state 100
    Dec      go to state 46


State 74

   17 StructSpecifier: STRUCT OptTag LC DefList error RC .

    $default  reduce using rule 17 (StructSpecifier)


State 75

   27 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 27 (VarList)


State 76

   39 Stmt: error SEMI .

    $default  reduce using rule 39 (Stmt)


State 77

   63 Exp: ID LP . Args RP
   64    | ID LP . RP
   71    | ID LP . error RP

    error  shift, and go to state 101
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62
    RP     shift, and go to state 102

    Exp   go to state 103
    Args  go to state 104


State 78

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   61    | MINUS Exp .
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   72    | Exp . LB error RB
   73    | Exp . ASSIGNOP error
   74    | Exp . AND error
   75    | Exp . OR error
   76    | Exp . RELOP error
   77    | Exp . PLUS error
   78    | Exp . MINUS error
   79    | Exp . STAR error
   80    | Exp . DIV error

    STAR  shift, and go to state 93
    DIV   shift, and go to state 94
    LB    shift, and go to state 97
    DOT   shift, and go to state 98

    $default  reduce using rule 61 (Exp)


State 79

   82 Exp: NOT error .

    $default  reduce using rule 82 (Exp)


State 80

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   62    | NOT Exp .
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   72    | Exp . LB error RB
   73    | Exp . ASSIGNOP error
   74    | Exp . AND error
   75    | Exp . OR error
   76    | Exp . RELOP error
   77    | Exp . PLUS error
   78    | Exp . MINUS error
   79    | Exp . STAR error
   80    | Exp . DIV error

    LB   shift, and go to state 97
    DOT  shift, and go to state 98

    $default  reduce using rule 62 (Exp)


State 81

   70 Exp: LP error . RP

    RP  shift, and go to state 105


State 82

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   60    | LP Exp . RP
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   72    | Exp . LB error RB
   73    | Exp . ASSIGNOP error
   74    | Exp . AND error
   75    | Exp . OR error
   76    | Exp . RELOP error
   77    | Exp . PLUS error
   78    | Exp . MINUS error
   79    | Exp . STAR error
   80    | Exp . DIV error
   81    | LP Exp . error

    error     shift, and go to state 106
    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    RP        shift, and go to state 107
    LB        shift, and go to state 97
    DOT       shift, and go to state 98


State 83

   35 Stmt: RETURN Exp . SEMI
   43     | RETURN Exp . error
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   72    | Exp . LB error RB
   73    | Exp . ASSIGNOP error
   74    | Exp . AND error
   75    | Exp . OR error
   76    | Exp . RELOP error
   77    | Exp . PLUS error
   78    | Exp . MINUS error
   79    | Exp . STAR error
   80    | Exp . DIV error

    error     shift, and go to state 108
    SEMI      shift, and go to state 109
    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    LB        shift, and go to state 97
    DOT       shift, and go to state 98


State 84

   36 Stmt: IF LP . Exp RP Stmt
   37     | IF LP . Exp RP Stmt ELSE Stmt
   40     | IF LP . error RP Stmt
   41     | IF LP . Exp RP error ELSE Stmt

    error  shift, and go to state 110
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 111


State 85

   38 Stmt: WHILE LP . Exp RP Stmt
   42     | WHILE LP . error RP Stmt

    error  shift, and go to state 112
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 113


State 86

   30 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 30 (CompSt)


State 87

   31 StmtList: Stmt StmtList .

    $default  reduce using rule 31 (StmtList)


State 88

   33 Stmt: Exp SEMI .

    $default  reduce using rule 33 (Stmt)


State 89

   52 Exp: Exp ASSIGNOP . Exp
   73    | Exp ASSIGNOP . error

    error  shift, and go to state 114
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 115


State 90

   55 Exp: Exp RELOP . Exp
   76    | Exp RELOP . error

    error  shift, and go to state 116
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 117


State 91

   56 Exp: Exp PLUS . Exp
   77    | Exp PLUS . error

    error  shift, and go to state 118
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 119


State 92

   57 Exp: Exp MINUS . Exp
   78    | Exp MINUS . error

    error  shift, and go to state 120
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 121


State 93

   58 Exp: Exp STAR . Exp
   79    | Exp STAR . error

    error  shift, and go to state 122
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 123


State 94

   59 Exp: Exp DIV . Exp
   80    | Exp DIV . error

    error  shift, and go to state 124
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 125


State 95

   53 Exp: Exp AND . Exp
   74    | Exp AND . error

    error  shift, and go to state 126
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 127


State 96

   54 Exp: Exp OR . Exp
   75    | Exp OR . error

    error  shift, and go to state 128
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 129


State 97

   65 Exp: Exp LB . Exp RB
   72    | Exp LB . error RB

    error  shift, and go to state 130
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 131


State 98

   66 Exp: Exp DOT . ID

    ID  shift, and go to state 132


State 99

   51 Dec: VarDec ASSIGNOP Exp .
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   72    | Exp . LB error RB
   73    | Exp . ASSIGNOP error
   74    | Exp . AND error
   75    | Exp . OR error
   76    | Exp . RELOP error
   77    | Exp . PLUS error
   78    | Exp . MINUS error
   79    | Exp . STAR error
   80    | Exp . DIV error

    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    LB        shift, and go to state 97
    DOT       shift, and go to state 98

    $default  reduce using rule 51 (Dec)


State 100

   49 DecList: Dec COMMA DecList .

    $default  reduce using rule 49 (DecList)


State 101

   71 Exp: ID LP error . RP

    RP  shift, and go to state 133


State 102

   64 Exp: ID LP RP .

    $default  reduce using rule 64 (Exp)


State 103

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   72    | Exp . LB error RB
   73    | Exp . ASSIGNOP error
   74    | Exp . AND error
   75    | Exp . OR error
   76    | Exp . RELOP error
   77    | Exp . PLUS error
   78    | Exp . MINUS error
   79    | Exp . STAR error
   80    | Exp . DIV error
   83 Args: Exp . COMMA Args
   84     | Exp .

    COMMA     shift, and go to state 134
    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    LB        shift, and go to state 97
    DOT       shift, and go to state 98

    $default  reduce using rule 84 (Args)


State 104

   63 Exp: ID LP Args . RP

    RP  shift, and go to state 135


State 105

   70 Exp: LP error RP .

    $default  reduce using rule 70 (Exp)


State 106

   81 Exp: LP Exp error .

    $default  reduce using rule 81 (Exp)


State 107

   60 Exp: LP Exp RP .

    $default  reduce using rule 60 (Exp)


State 108

   43 Stmt: RETURN Exp error .

    $default  reduce using rule 43 (Stmt)


State 109

   35 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 35 (Stmt)


State 110

   40 Stmt: IF LP error . RP Stmt

    RP  shift, and go to state 136


State 111

   36 Stmt: IF LP Exp . RP Stmt
   37     | IF LP Exp . RP Stmt ELSE Stmt
   41     | IF LP Exp . RP error ELSE Stmt
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   72    | Exp . LB error RB
   73    | Exp . ASSIGNOP error
   74    | Exp . AND error
   75    | Exp . OR error
   76    | Exp . RELOP error
   77    | Exp . PLUS error
   78    | Exp . MINUS error
   79    | Exp . STAR error
   80    | Exp . DIV error

    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    RP        shift, and go to state 137
    LB        shift, and go to state 97
    DOT       shift, and go to state 98


State 112

   42 Stmt: WHILE LP error . RP Stmt

    RP  shift, and go to state 138


State 113
